// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InsetText > should match snapshot - visually hidden 1`] = `
<div
  class="nhsuk-inset-text"
  data-testid="inset"
>
  <span
    class="nhsuk-u-visually-hidden"
  >
    Hidden text
  </span>
  Inset Text
</div>
`;

exports[`InsetText > should match snapshot 1`] = `
<div
  class="nhsuk-inset-text"
  data-testid="inset"
>
  <span
    class="nhsuk-u-visually-hidden"
  >
    Information: 
  </span>
  Inset Text
</div>
`;
